// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirmation Snapshot tests should match snapshot 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="component left"
    >
      <h3
        class="component header typography styrene-medium medium primary"
      >
        Введите код из сообщения
      </h3>
      <div
        class="component containerInput codeInput"
      >
        <div
          class=""
        >
          <input
            autocomplete="one-time-code"
            class="input component"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
        </div>
      </div>
      <div
        class="countdownContainer typographyTheme primary-medium"
      >
        Запросить повторно можно через 01:00
      </div>
      <button
        class="component secondary pseudo smsComeLink"
        type="button"
      >
        <span
          class="text"
        >
          Не приходит сообщение?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with CODE_CHECKING state 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="component left"
    >
      <h3
        class="component header typography styrene-medium medium primary"
      >
        Введите код из сообщения
      </h3>
      <div
        class="component containerInput codeInput"
      >
        <div
          class=""
        >
          <input
            autocomplete="one-time-code"
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
        </div>
      </div>
      <div
        class="loaderWrap countdownContainer typographyTheme"
      >
        <svg
          class="spinner component preset24 visible"
          style="height: 20px; width: 20px;"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <mask
              id=":r0:"
            >
              <circle
                cx="50%"
                cy="50%"
                pathLength="360"
                r="9"
                stroke="#fff"
                stroke-dasharray="263 97"
                stroke-dashoffset="-7"
                stroke-linecap="round"
                stroke-width="2"
              />
            </mask>
          </defs>
          <foreignobject
            height="20"
            mask="url(#:r0:)"
            width="20"
            x="0"
            y="0"
          >
            <div
              class="gradient"
            />
          </foreignobject>
        </svg>
        <span
          class="loaderText"
        />
      </div>
      <button
        class="component secondary pseudo smsComeLink"
        type="button"
      >
        <span
          class="text"
        >
          Не приходит сообщение?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with CODE_ERROR state 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="component left"
    >
      <h3
        class="component header typography styrene-medium medium primary"
      >
        Введите код из сообщения
      </h3>
      <div
        class="component containerInput codeInput"
      >
        <div
          class="shake"
        >
          <input
            autocomplete="one-time-code"
            class="input component hasError"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component hasError"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component hasError"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component hasError"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component hasError"
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
        </div>
        <div
          class="error"
          role="alert"
        >
          Код введён неверно
        </div>
      </div>
      <div
        class="countdownContainer typographyTheme primary-medium"
      >
        Запросить повторно можно через 01:00
      </div>
      <button
        class="component secondary pseudo smsComeLink"
        type="button"
      >
        <span
          class="text"
        >
          Не приходит сообщение?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with CODE_SENDING state 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="component left"
    >
      <h3
        class="component header typography styrene-medium medium primary"
      >
        Введите код из сообщения
      </h3>
      <div
        class="component containerInput codeInput"
      >
        <div
          class=""
        >
          <input
            autocomplete="one-time-code"
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
          <input
            autocomplete=""
            class="input component disabled"
            disabled=""
            inputmode="numeric"
            pattern="[0-9]*"
            value=""
          />
        </div>
      </div>
      <div
        class="loaderWrap countdownContainer typographyTheme"
      >
        <svg
          class="spinner component preset24 visible"
          style="height: 20px; width: 20px;"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <mask
              id=":r1:"
            >
              <circle
                cx="50%"
                cy="50%"
                pathLength="360"
                r="9"
                stroke="#fff"
                stroke-dasharray="263 97"
                stroke-dashoffset="-7"
                stroke-linecap="round"
                stroke-width="2"
              />
            </mask>
          </defs>
          <foreignobject
            height="20"
            mask="url(#:r1:)"
            width="20"
            x="0"
            y="0"
          >
            <div
              class="gradient"
            />
          </foreignobject>
        </svg>
        <span
          class="loaderText"
        />
      </div>
      <button
        class="component secondary pseudo smsComeLink"
        type="button"
      >
        <span
          class="text"
        >
          Не приходит сообщение?
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with FATAL_ERROR screen 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="component left"
    >
      <h3
        class="component header typography styrene-medium medium primary"
      >
        Ввести код больше нельзя
      </h3>
      <span
        class="typographyTheme primary primary-medium"
      >
        Вы ввели код неверно более 5 раз. В целях безопасности мы ограничили дальнейший ввод.
      </span>
      <button
        class="component secondary size-48 hug size-48 component secondary component secondary button"
        type="button"
      >
        <span
          class="label stretchText"
        >
          Понятно
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with HINT screen 1`] = `
<div>
  <div
    class="component"
  >
    <div
      class="component left"
    >
      <h3
        class="component header typography styrene-medium medium primary"
      >
        Превышено количество попыток запроса кода
      </h3>
      <span
        class="description typographyTheme primary primary-medium"
      >
        Повторное подтверждение кодом будет возможно через 24 часа
      </span>
      <div
        class="countdownWrap typographyTheme"
      >
        <svg
          class="loader"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <circle
            class="circle"
            cx="8"
            cy="8"
            r="7"
            stroke-dasharray="43.98"
            stroke-dashoffset="0.00"
            transform="rotate(-90 8 8)"
          />
        </svg>
        24:00:00
      </div>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with HINT screen 2`] = `
<div>
  <div
    class="component"
  >
    <div
      class="component left"
    >
      <h3
        class="component header typography styrene-medium medium primary"
      >
        Не приходит сообщение?
      </h3>
      <span
        class="text typographyTheme primary primary-medium"
      >
        Если у вас изменился номер телефона, позвоните нам или обратитесь в любое отделение банка.
      </span>
      <div
        class="phonesWrap"
      >
        <div
          class="phoneWrap"
        >
          <a
            class="component primary withoutUnderline phoneLink"
            href="tel:+78002000000"
          >
            <span
              class="text"
            >
              8 800 200 00 00
            </span>
          </a>
          <span
            class="text typographyTheme primary primary-medium"
          >
             — для звонков по России
          </span>
        </div>
        <div
          class="phoneWrap"
        >
          <a
            class="component primary withoutUnderline phoneLink"
            href="tel:+74957888878"
          >
            <span
              class="text"
            >
              +7 495 78 888 78
            </span>
          </a>
          <span
            class="text typographyTheme primary primary-medium"
          >
             — в Москве и за границей
          </span>
        </div>
      </div>
      <span
        class="text typographyTheme primary primary-medium"
      >
        Если номер не менялся, возможно, перегружен сервис отправки сообщений. Попробуйте повторить действие через несколько минут.
      </span>
      <button
        class="component secondary size-48 hug size-48 component secondary component secondary hintButton"
        type="button"
      >
        <span
          class="label stretchText"
        >
          Вернуться к вводу кода
        </span>
      </button>
    </div>
  </div>
</div>
`;
